// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDescriptiveFormRow is rendered 1`] = `
<div
  aria-describedby="generated-id"
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  className="euiDescriptiveFormRow testClass1 testClass2"
  data-test-subj="test subject string"
  role="group"
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiTitle
        className="euiDescriptiveFormRow__title"
        id="generated-id-title"
        size="xs"
      >
        <h3>
          Title
        </h3>
      </EuiTitle>
      <EuiText
        className="euiDescriptiveFormRow__description"
        color="subdued"
        grow={true}
        id="generated-id"
        size="s"
      >
        Test description
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescriptiveFormRow__fields euiDescriptiveFormRow__fieldPadding--xsmall"
      component="div"
      grow={true}
    >
      <EuiFormRow
        describedByIds={Array []}
        fullWidth={false}
        hasEmptyLabelSpace={false}
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescriptiveFormRow props fullWidth is rendered 1`] = `
<div
  aria-describedby="generated-id"
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  className="euiDescriptiveFormRow euiDescriptiveFormRow--fullWidth testClass1 testClass2"
  data-test-subj="test subject string"
  role="group"
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={true}
    >
      <EuiTitle
        className="euiDescriptiveFormRow__title"
        id="generated-id-title"
        size="xs"
      >
        <h3>
          Title
        </h3>
      </EuiTitle>
      <EuiText
        className="euiDescriptiveFormRow__description"
        color="subdued"
        grow={true}
        id="generated-id"
        size="s"
      >
        Test description
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescriptiveFormRow__fields euiDescriptiveFormRow__fieldPadding--xsmall"
      component="div"
      grow={true}
    >
      <EuiFormRow
        describedByIds={Array []}
        fullWidth={true}
        hasEmptyLabelSpace={false}
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescriptiveFormRow props gutterSize is rendered 1`] = `
<div
  aria-describedby="generated-id"
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  className="euiDescriptiveFormRow testClass1 testClass2"
  data-test-subj="test subject string"
  role="group"
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="s"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiTitle
        className="euiDescriptiveFormRow__title"
        id="generated-id-title"
        size="xs"
      >
        <h3>
          Title
        </h3>
      </EuiTitle>
      <EuiText
        className="euiDescriptiveFormRow__description"
        color="subdued"
        grow={true}
        id="generated-id"
        size="s"
      >
        Test description
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescriptiveFormRow__fields euiDescriptiveFormRow__fieldPadding--xsmall"
      component="div"
      grow={true}
    >
      <EuiFormRow
        describedByIds={Array []}
        fullWidth={false}
        hasEmptyLabelSpace={false}
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescriptiveFormRow props titleSize is rendered 1`] = `
<div
  aria-describedby="generated-id"
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  className="euiDescriptiveFormRow testClass1 testClass2"
  data-test-subj="test subject string"
  role="group"
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
    >
      <EuiTitle
        className="euiDescriptiveFormRow__title"
        id="generated-id-title"
        size="l"
      >
        <h3>
          Title
        </h3>
      </EuiTitle>
      <EuiText
        className="euiDescriptiveFormRow__description"
        color="subdued"
        grow={true}
        id="generated-id"
        size="s"
      >
        Test description
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescriptiveFormRow__fields euiDescriptiveFormRow__fieldPadding--large"
      component="div"
      grow={true}
    >
      <EuiFormRow
        describedByIds={Array []}
        fullWidth={false}
        hasEmptyLabelSpace={false}
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescriptiveFormRow ties together parts for accessibility 1`] = `
<EuiDescribedFormGroup
  aria-label="aria-label"
  className="testClass1 testClass2"
  data-test-subj="test subject string"
  description="Test description"
  fullWidth={false}
  gutterSize="l"
  idAria="test-id"
  title={
    <h3>
      Title
    </h3>
  }
  titleSize="xs"
>
  <div
    aria-describedby={null}
    aria-label="aria-label"
    aria-labelledby="test-id-title"
    className="euiDescriptiveFormRow testClass1 testClass2"
    data-test-subj="test subject string"
    role="group"
  >
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      direction="row"
      gutterSize="l"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <EuiFlexItem
          component="div"
          grow={false}
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <EuiTitle
              className="euiDescriptiveFormRow__title"
              id="test-id-title"
              size="xs"
            >
              <h3
                className="euiTitle euiTitle--xsmall euiDescriptiveFormRow__title"
                id="test-id-title"
              >
                Title
              </h3>
            </EuiTitle>
            <EuiText
              className="euiDescriptiveFormRow__description"
              color="subdued"
              grow={true}
              id="test-id"
              size="s"
            >
              <div
                className="euiText euiText--small euiDescriptiveFormRow__description"
                id="test-id"
              >
                <EuiTextColor
                  color="subdued"
                >
                  <span
                    className="euiTextColor euiTextColor--subdued"
                  >
                    Test description
                  </span>
                </EuiTextColor>
              </div>
            </EuiText>
          </div>
        </EuiFlexItem>
        <EuiFlexItem
          className="euiDescriptiveFormRow__fields euiDescriptiveFormRow__fieldPadding--xsmall"
          component="div"
          grow={true}
        >
          <div
            className="euiFlexItem euiDescriptiveFormRow__fields euiDescriptiveFormRow__fieldPadding--xsmall"
          >
            <EuiFormRow
              describedByIds={
                Array [
                  "idAria",
                ]
              }
              error={
                Array [
                  "Error one",
                  "Error two",
                ]
              }
              fullWidth={false}
              hasEmptyLabelSpace={false}
              helpText="Help text"
              isInvalid={true}
              label="Label"
            >
              <div
                className="euiFormRow"
                id="generated-id-row"
              >
                <EuiFormLabel
                  htmlFor="generated-id"
                  isFocused={false}
                  isInvalid={true}
                >
                  <label
                    className="euiFormLabel euiFormLabel-isInvalid"
                    htmlFor="generated-id"
                  >
                    Label
                  </label>
                </EuiFormLabel>
                <input
                  aria-describedby="idAria generated-id-help generated-id-error-0 generated-id-error-1"
                  id="generated-id"
                  onBlur={[Function]}
                  onFocus={[Function]}
                />
                <EuiFormErrorText
                  className="euiFormRow__text"
                  id="generated-id-error-0"
                  key="Error one"
                >
                  <div
                    className="euiFormErrorText euiFormRow__text"
                    id="generated-id-error-0"
                  >
                    Error one
                  </div>
                </EuiFormErrorText>
                <EuiFormErrorText
                  className="euiFormRow__text"
                  id="generated-id-error-1"
                  key="Error two"
                >
                  <div
                    className="euiFormErrorText euiFormRow__text"
                    id="generated-id-error-1"
                  >
                    Error two
                  </div>
                </EuiFormErrorText>
                <EuiFormHelpText
                  className="euiFormRow__text"
                  id="generated-id-help"
                >
                  <div
                    className="euiFormHelpText euiFormRow__text"
                    id="generated-id-help"
                  >
                    Help text
                  </div>
                </EuiFormHelpText>
              </div>
            </EuiFormRow>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
  </div>
</EuiDescribedFormGroup>
`;
